# libarp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: main.yml
res/: supplemental_mappings.csv
src/: defines.rs  lib.rs  mappings.rs  pack.rs  package.rs  resource.rs  set.rs  types.rs
src/util/: crc32c.rs  mod.rs  uid.rs
