[package]
name = "arp"
version = "0.0.1"
edition = "2021"

[lib]
name = "arp"
crate-type = ["rlib"]

[features]
default = ["arptool"]
arptool = ["clap"]

[[bin]]
name = "arptool"
required-features = ["arptool"]

[dependencies]
clap = { version = "4.5.30", optional = true, features = ["derive"] }
miniz_oxide = "0.8.4"
uuid = { version = "1.14.0", features = ["v4"] }
